# plasma-applet-net-bandwidth-monitor

./: CMakeLists.txt  ChangeLog  README.md
package/: NetBandwidthMonitor-0.3.2.plasmoid  metadata.desktop
package/contents/config/: config.qml  main.xml
package/contents/locale/en/LC_MESSAGES/: plasma_applet_org.kde.nsw_dbus.mo
package/contents/locale/zh_CN/LC_MESSAGES/: plasma_applet_org.kde.nsw_dbus.mo
package/contents/ui/: CompactRepresentation.qml  DbusData.qml  main.qml  qmldir
package/contents/ui/config/: ConfigGeneral.qml  configCPU.qml  configGeneral.qml  configNetwork.qml
package/contents/ui/imports/DbusModel/: plugins.qmltypes
package/translate/: ReadMe.md  build.sh  en.po  merge  merge.sh  run-translate-test  template.pot  zh_CN.po
